--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.1
 googleapis-common-protos==1.66.0
 gspread==6.1.4
+gunicorn==23.0.0
 httplib2==0.22.0
 idna==3.10
 ipykernel==6.29.4
@@ -48,6 +49,7 @@ Pygments==2.17.2
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
+pywin32==306
 pyzmq==26.0.0
 requests==2.32.3
 requests-oauthlib==2.0.0
@@ -64,5 +66,6 @@ typing_extensions==4.11.0
 tzdata==2024.2
 uritemplate==4.1.1
 urllib3==2.2.3
+waitress==3.0.2
 wcwidth==0.2.13
 Werkzeug==3.1.3
