--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,7 @@ Pygments==2.17.2
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
-pywin32==306
+pywin32==306; platform_system == "Windows"
 pyzmq==26.0.0
 requests==2.32.3
 requests-oauthlib==2.0.0
