--- a/requirements.txt
+++ b/requirements.txt
@@ -32,10 +32,10 @@ MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
 mpmath==1.3.0
 nest-asyncio==1.6.0
-numpy==2.1.3
+numpy>=1.24.3
 oauthlib==3.2.2
 packaging==24.0
-pandas==2.2.3
+pandas>=1.5.3
 parso==0.8.4
 platformdirs==4.2.0
 prompt-toolkit==3.0.43
@@ -49,7 +49,6 @@ Pygments==2.17.2
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
-pywin32==306; platform_system == "Windows"
 pyzmq==26.0.0
 requests==2.32.3
 requests-oauthlib==2.0.0
@@ -66,6 +65,4 @@ typing_extensions==4.11.0
 tzdata==2024.2
 uritemplate==4.1.1
 urllib3==2.2.3
-waitress==3.0.2
-wcwidth==0.2.13
 Werkzeug==3.1.3
